--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Mac OS X
+.DS_Store
+
+# IntelliJ IDEA
+.idea/
+*.iml
