--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>uk.ac.open.kmi.forge.ptAnywhere</groupId>
-    <artifactId>widgets</artifactId>
+    <artifactId>ptAnywhere-widgets</artifactId>
     <packaging>war</packaging>
     <version>0.4-SNAPSHOT</version>
     <name>PTAnywhere widgets</name>
