--- a/src/main/resources/environment.dev.properties
+++ b/src/main/resources/environment.dev.properties
@@ -4,7 +4,7 @@ title = Widget (development version)
 
 
 # URL of the PTAnywhere API used by the widget
-ptAnywhere.api = http://192.168.34.202:8080/ptAnywhere/api
+ptAnywhere.api = http://192.168.34.202:8080/api/v1
 
 
 # Tomcat deployment details
