--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -4,11 +4,11 @@ title = Widget
 
 
 # URL of the PTAnywhere API used by the widget
-ptAnywhere.api = http://forge.kmi.open.ac.uk/api
+ptAnywhere.api = http://forge.kmi.open.ac.uk/api/v1
 
 
 # Tomcat deployment details
 tomcat.url = http://forge.kmi.open.ac.uk/manager/text
 tomcat.server = productionServer
-tomcat.path = /widgets
+tomcat.path = /pt
 
