--- a/src/main/resources/environment.test.properties
+++ b/src/main/resources/environment.test.properties
@@ -4,10 +4,10 @@ title = Widget (testing version)
 
 
 # URL of the PTAnywhere API used by the widget
-ptAnywhere.api = http://forge.kmi.open.ac.uk/api-test
+ptAnywhere.api = http://forge.kmi.open.ac.uk/api-test/v1
 
 
 # Tomcat deployment details
 tomcat.url = http://forge.kmi.open.ac.uk/manager/text
 tomcat.server = testingServer
-tomcat.path = /widgets-test
+tomcat.path = /test
