Specifying base topology during session creation and creating another widget which uses the same GUI to show this functionality.
Read more: https://github.com/PTAnywhere/ptAnywhere-api/issues/7

--- a/src/main/resources/environment.dev.properties
+++ b/src/main/resources/environment.dev.properties
@@ -11,3 +11,8 @@ ptAnywhere.api = http://192.168.34.202:8080/api/v1
 tomcat.url = http://192.168.34.202:8080/manager/text
 tomcat.server = vagrantServer
 tomcat.path = /widgets
+
+
+# Files to be used by this application's widgets
+ptFile.default = http://192.168.34.202:8080/files/ibookdemo611.pkt
+ptFile.demo2 = http://192.168.34.202:8080/files/newibookdemo.pkt
