--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -12,3 +12,7 @@ tomcat.url = http://forge.kmi.open.ac.uk/manager/text
 tomcat.server = productionServer
 tomcat.path = /pt
 
+
+# Files to be used by this application's widgets
+ptFile.default = http://forge.kmi.open.ac.uk/files/ibookdemo611.pkt
+ptFile.demo2 = http://forge.kmi.open.ac.uk/files/newibookdemo.pkt
