--- a/src/main/resources/environment.test.properties
+++ b/src/main/resources/environment.test.properties
@@ -11,3 +11,8 @@ ptAnywhere.api = http://forge.kmi.open.ac.uk/api-test/v1
 tomcat.url = http://forge.kmi.open.ac.uk/manager/text
 tomcat.server = testingServer
 tomcat.path = /test
+
+
+# Files to be used by this application's widgets
+ptFile.default = http://forge.kmi.open.ac.uk/files/ibookdemo611.pkt
+ptFile.demo2 = http://forge.kmi.open.ac.uk/files/newibookdemo.pkt
