Adding webpage to generate memorable names randomly or based on a session id stored in the local storage.

--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <!-- <artifactId>jersey-container-servlet-core</artifactId> -->
             <!-- use the following artifactId if you don't need servlet 2.x compatibility -->
