--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
     </properties>
 
     <build>
-        <finalName>ptAnywhere</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -81,9 +80,73 @@
                                 <delete file="${project.build.outputDirectory}/environment.properties"/>
                                 <copy file="${property-file}"
                                       tofile="${project.build.outputDirectory}/environment.properties"/>
+                                <copy file="widget/dist/ptAnywhere.min.js"
+                                      tofile="${project.build.directory}/${project.build.finalName}/static/js/ptAnywhere.min.js"/>
+                                <copy todir="${project.build.directory}/${project.build.finalName}/static/css">
+                                    <fileset dir="widget/dist/css" />
+                                </copy>
+                                <copy todir="${project.build.directory}/${project.build.finalName}/static/images">
+                                    <fileset dir="widget/dist/img" />
+                                </copy>
+                                <copy todir="${project.build.directory}/${project.build.finalName}/static/js/vendors">
+                                    <fileset dir="widget/scripts/tmp/vendors" />
+                                </copy>
                             </tasks>
                         </configuration>
                     </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>1.0</version>
+
+                <configuration>
+                    <workingDirectory>widget/scripts</workingDirectory>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>install node and npm</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                        <configuration>
+                            <nodeVersion>v5.3.0</nodeVersion>
+                            <npmVersion>3.3.12</npmVersion>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>npm install</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <!-- Optional configuration which provides for running any npm command -->
+                        <configuration>
+                            <arguments>install</arguments>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>bower install</id>
+                        <goals>
+                            <goal>bower</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>install</arguments>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>gulp build</id>
+                        <goals>
+                            <goal>gulp</goal>
+                        </goals>
+                    </execution>
+
+                    <!-- Karma tests not specified here because they are run by Gulp -->
+
                 </executions>
             </plugin>
         </plugins>
